# sockets

./: README.md
sockets/: CMakeLists.txt
sockets/client/: CMakeLists.txt  client.cpp
sockets/lib/: CMakeLists.txt  libmylib.cpp  mylib.h
sockets/server/: CMakeLists.txt  server.cpp
